# lexicon-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-and-lint.yml  test.yml
lib/codegen/: Cargo.toml
lib/codegen/src/: doc_builder.rs  lib.rs
lib/codegen/src/lex/: array.rs  mod.rs  object.rs  primitive.rs  record.rs  ref.rs  string.rs  union.rs
lib/codegen/src/xrpc/: body.rs  mod.rs  parameters.rs  preamble.rs  procedure.rs  query.rs  subscription.rs
lib/lexicon/: Cargo.toml
lib/lexicon/src/: doc.rs  lexicon.rs  lib.rs
lib/macro/: Cargo.toml
lib/macro/src/: lib.rs
lib/nsid/: Cargo.toml
lib/nsid/src/: lib.rs
lib/test/: Cargo.toml
lib/test/src/: lex.rs  main.rs
lib/xrpc/: Cargo.toml
lib/xrpc/src/: error.rs  lib.rs  procedure.rs  query.rs  subscription.rs
src/: main.rs
