[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
macro = { path = "../macro" }
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
xrpc = { path = "../xrpc" }
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1.28.0", features = ["full"] }
