[package]
name = "xrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
futures = "0.3.28"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt", "macros"] }
